feat(situations): gerer entreprise libre pour les situations et mettre a jour openapi
